# YaServiceRu

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  constants.ini.secret  docker-compose.yml  main.py  requirements.txt  run_compose.sh  setup.py  telegram_db.sqlite.secret
OpenAI/: HF_embeddings.py  Pinecone.ipynb  RAG.ipynb  test.py  (+3 more)
app/: LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
app/config/dev/: core.yaml  database.yaml  vector_database.yaml
app/config/local/: core.yaml  database.yaml  vector_database.yaml  wiki.yaml
app/config/main/: core.yaml  wiki.yaml
app/media/user/chatbot/: data.yaml
app/media/user/start/: data.yaml
app/media/user/wiki/Apple/Mac/10_Terminal/Date_Time/: Date_Time.yaml
app/media/user/wiki/Apple/Mac/10_Terminal/Launch/: Launch.yaml
app/media/user/wiki/Apple/Mac/1_Slowing_Bugging/Reset_CMOS_NVRAM/: Reset_CMOS_NVRAM.yaml
app/media/user/wiki/Apple/Mac/2_Installation_Recovery/Installation_BootUSB/: Installation_BootUSB.yaml
app/media/user/wiki/Apple/Mac/2_Installation_Recovery/Recovery_MacOS/: Recovery_MacOS.yaml
app/media/user/wiki/Apple/Mac/2_Installation_Recovery/Update_MacOS/: Update_MacOS.yaml
app/media/user/wiki/Apple/Mac/3_Bootcamp_Parallels/Bootcamp/: Bootcamp.yaml
app/media/user/wiki/Apple/Mac/4_Devices_Periphery/Flash_Drive/: Flash_Drive.yaml
app/media/user/wiki/Apple/Mac/5_System_Settings/Language_Input/: Language_Input.yaml
app/media/user/wiki/Apple/Mac/6_Saving_Data/Free_Storage/: Free_Storage.yaml
app/media/user/wiki/Apple/Mac/7_Network_Internet/Reset_Network_Settings/: Reset_Network_Settings.yaml
app/media/user/wiki/Apple/Mac/8_Security/Authorize_Installation_Apps/: Authorize_Installation_Apps.yaml
app/media/user/wiki/Apple/Mac/9_Display_Graphics/Automatic_Switching/: Automatic_Switching.yaml
app/media/user/wiki/Windows/1_Slowing_Bugging/Auto_Upload/: Auto_Upload.yaml
app/media/user/wiki/Windows/1_Slowing_Bugging/Hard_Disk_SSD/: Hard_Disk_SSD.yaml
app/media/user/wiki/Windows/1_Slowing_Bugging/Heating/: Heating.yaml
app/media/user/wiki/Windows/2_Update_Drivers/: Update_Drivers.yaml
app/media/user/wiki/Windows/2_Update_Drivers/Disable_Update/: Disable_Update.yaml
app/media/user/wiki/Windows/2_Update_Drivers/Installing_Updating_Drivers/: Installing_Updating_Drivers.yaml
app/media/user/wiki/Windows/2_Update_Drivers/Update_Windows_10_11/: Update_Windows_10_11.yaml
app/media/user/wiki/Windows/3_Installation_Recovery/Bootable_USB/: Bootable_USB.yaml
app/media/user/wiki/Windows/3_Installation_Recovery/No_Disk_Partitions/: No_Disk_Partitions.yaml
app/media/user/wiki/Windows/3_Installation_Recovery/OS_Installation/: OS_Installation.yaml
app/media/user/wiki/Windows/5_Network_Internet/No_Internet_Access/: No_Internet_Access.yaml
app/media/user/wiki/Windows/6_Devices_Periphery/: Devices_Periphery.yaml
app/media/user/wiki/Windows/9_Saving_Data/Clearing_Disk/: Clearing_Disk.yaml
app/scripts/: local.py  reinit_persistence.py  run_telefix.py
app/telefix/: __init__.py  __main__.py  telefix.py
app/telefix/admin/: orders.py  send_all.py
app/telefix/backend/error_logging/: error_logging.py  handler.py
app/telefix/backend/global_fallback/: handler.py
app/telefix/backend/prompt_validator/: handler.py  prompt_validator.py
app/telefix/backend/restart/: handler.py
app/telefix/common/: __init__.py  helpers.py  logging.py  logging_setup.py  types.py  yaml_loader.py
app/telefix/config/core/: dev.yaml  local.yaml  main.yaml
app/telefix/config/module/: module.yaml
app/telefix/contractor/: assign.py  commands.py  complete.py
app/telefix/core/: __init__.py  bot_config_manager.py  bot_launcher.py  config_template.py  data_reader.py  module_manager.py
app/telefix/daemons/: README.md
app/telefix/daemons/error_logging/: __init__.py  error_logging.py  handler.py
app/telefix/daemons/global_fallback/: __init__.py  handler.py  unknown_command.py
app/telefix/daemons/prompt_validator/: handler.py  prompt_validator.py
app/telefix/daemons/restart/: __init__.py  handler.py  restart.py
app/telefix/data/user/start/: data.yaml
app/telefix/data/user/wiki/Apple/Mac/10_Terminal/: Terminal.yaml
app/telefix/data/user/wiki/Windows/1_Slowing_Bugging/Hard_Disk_SSD/: Hard_Disk_SSD.yaml
app/telefix/data/user/wiki/Windows/3_Installation_Recovery/OS_Installation/: OS_Installation.yaml
app/telefix/data/user/wiki/Windows/6_Devices_Periphery/: Devices_Periphery.yaml
app/telefix/data/vector_database/: data.yaml
app/telefix/database/: README.md  database.py  handler.py  utils.py
app/telefix/telefix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
app/telefix/user/chatbot/: __init__.py  config.py  handler.py
app/telefix/user/chatbot/callback/: check_remaining_tokens.py  handler.py  payment_launch.py  request.py  start.py  stop.py
app/telefix/user/request/: __init__.py  handler.py  request.py
app/telefix/user/start/: handler.py  start.py
app/telefix/user/wiki/: constants.py  handler.py  page.py  share.py  telegram_website.py  wiki.py
app/telefix/vector_database/: README.md  __init__.py  vector_database.py
app/test/src/common/data/: test_db_utils.py
(+517 files in other folders)
